--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,13 +1,13 @@
 repos:
-  - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v3.2.0
+  - repo: git://github.com/pre-commit/pre-commit-hooks
+    rev: v3.4.0
     hooks:
       - id: trailing-whitespace
       - id: end-of-file-fixer
       - id: check-xml
       - id: check-yaml
       - id: check-added-large-files
-      - id: check-byte-order-marker
+      - id: fix-byte-order-marker
       - id: check-merge-conflict
       - id: check-case-conflict
       - id: detect-aws-credentials
@@ -18,8 +18,10 @@ repos:
       - id: pretty-format-json
         args: [--autofix, --no-sort-keys]
   - repo: git://github.com/antonbabenko/pre-commit-terraform
-    rev: v1.43.0
+    rev: v1.45.0
     hooks:
       - id: terraform_fmt
       - id: terraform_docs
+      - id: terraform_docs_without_aggregate_type_defaults
       - id: terraform_tflint
+      - id: terraform_tfsec
